--- a/templates/actor/parts/simple-expandable-item.html
+++ b/templates/actor/parts/simple-expandable-item.html
@@ -1,19 +1,19 @@
 <li class="item" data-item-id="{{item._id}}">
     <div class=" flexrow">
-        {{#if (ne item.data.quantity undefined)}}
-        <input type="number" class="item-quantity num-short-2" name="data.quantity" value="{{item.data.quantity}}" min="0">&nbsp;
+        {{#if (ne item.system.quantity undefined)}}
+        <input type="number" class="item-quantity num-short-2" name="system.quantity" value="{{item.system.quantity}}" min="0">&nbsp;
         {{/if}}
         <div class="item-name flexlarge expandable-info">
             <h4><a class="resource-label">{{item.name}}</a></h4>
         </div>
         <div class="item-controls">
-            {{#ifCond item.data.stashed '!=' null}}
-            <a class="item-control item-stash {{#unless item.data.stashed}}item-unstashed{{/unless}}" title='{{localize "FALLOUT.UI.stashed"}}'>
+            {{#ifCond item.system.stashed '!=' null}}
+            <a class="item-control item-stash {{#unless item.system.stashed}}item-unstashed{{/unless}}" title='{{localize "FALLOUT.UI.stashed"}}'>
                 <i class="fas fa-briefcase"></i>
             </a>
             {{/ifCond}}
-            {{#if item.data.equippable}}
-            <a class="item-control item-toggle {{#unless item.data.equipped}}item-unequipped{{/unless}}" title='{{localize "FALLOUT.equipped"}}'>
+            {{#if item.system.equippable}}
+            <a class="item-control item-toggle {{#unless item.system.equipped}}item-unequipped{{/unless}}" title='{{localize "FALLOUT.equipped"}}'>
                 <i class="fas fa-tshirt"></i>
             </a>
             {{/if}}
