--- a/templates/actor/actor-creature-sheet.html
+++ b/templates/actor/actor-creature-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} {{actor.type}} flexcol theme-wrapper" autocomplete="off">
 
     {{!-- Sheet Header --}}
-    {{> "systems/fallout/templates/actor/parts/actor-header.html"}}
+    {{> "systems/fallout-dusty/templates/actor/parts/actor-header.html"}}
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
@@ -24,32 +24,32 @@
                         <div class="box no-padding bgOdd">
                             <h3 class="box-header text-center">{{localize "FALLOUT.CREATURE.body"}}</h3>
                             <div class="text-center">
-                                <input class="num-short-2" type="number" name="data.body.value" value="{{data.body.value}}">
+                                <input class="num-short-2" type="number" name="system.body.value" value="{{actor.system.body.value}}">
                             </div>
                         </div>
                         <div class="box no-padding bgEven" style="margin-right: 5px;">
                             <h3 class="box-header text-center">{{localize "FALLOUT.CREATURE.mind"}}</h3>
                             <div class="text-center">
-                                <input class="num-short-2" type="number" name="data.mind.value" value="{{data.mind.value}}">
+                                <input class="num-short-2" type="number" name="system.mind.value" value="{{actor.system.mind.value}}">
                             </div>
                         </div>
 
                         <div class="box no-padding bgOdd">
                             <h3 class="box-header text-center">{{localize "FALLOUT.CREATURE.melee"}}</h3>
                             <div class="text-center">
-                                <input class="num-short-2" type="number" name="data.melee.value" value="{{data.melee.value}}">
+                                <input class="num-short-2" type="number" name="system.melee.value" value="{{actor.system.melee.value}}">
                             </div>
                         </div>
                         <div class="box no-padding bgEven">
                             <h3 class="box-header text-center">{{localize "FALLOUT.CREATURE.guns"}}</h3>
                             <div class="text-center">
-                                <input class="num-short-2" type="number" name="data.guns.value" value="{{data.guns.value}}">
+                                <input class="num-short-2" type="number" name="system.guns.value" value="{{actor.system.guns.value}}">
                             </div>
                         </div>
                         <div class="box no-padding bgOdd">
                             <h3 class="box-header text-center">{{localize "FALLOUT.CREATURE.other"}}</h3>
                             <div class="text-center">
-                                <input class="num-short-2" type="number" name="data.other.value" value="{{data.other.value}}">
+                                <input class="num-short-2" type="number" name="actor.system.other.value" value="{{actor.system.other.value}}">
                             </div>
                         </div>
                     </div>
@@ -57,38 +57,38 @@
                         <div class="box no-padding bgEven">
                             <h4 class="box-header text-center">HP</h4>
                             <div class="flexrow">
-                                <input class="num-short-3" type="number" name="data.health.value" value="{{data.health.value}}">
+                                <input class="num-short-3" type="number" name="system.health.value" value="{{actor.system.health.value}}">
                                 <label class="text-center"> / </label>
-                                <input class="num-short-3" type="number" name="data.health.max" value="{{data.health.max}}">
+                                <input class="num-short-3" type="number" name="system.health.max" value="{{actor.system.health.max}}">
                             </div>
                         </div>
                         <div class="box no-padding bgOdd">
                             <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.INITIATIVE"}}</h4>
                             <div class="text-center">
-                                <input class="num-short-2" type="number" name="data.initiative.value" value="{{data.initiative.value}}">
+                                <input class="num-short-2" type="number" name="system.initiative.value" value="{{actor.system.initiative.value}}">
                             </div>
                         </div>
                         <div class="box no-padding bgEven">
                             <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.DEFENSE"}}</h4>
                             <div class="text-center">
-                                <input class="num-short-2" type="number" name="data.defense.value" value="{{data.defense.value}}">
+                                <input class="num-short-2" type="number" name="system.defense.value" value="{{actor.system.defense.value}}">
                             </div>
                         </div>
                     </div>
                     <div class="box no-padding bgOdd">
                         <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.RESISTANCES"}}</h4>
-                        {{#each data.resistance as |res key|}}
+                        {{#each actor.system.resistance as |res key|}}
                         <div class="flexrow resource-row">
                             <span class="align-mid" style="display: flex;">
-                                <label for="data.resistance.{{key}}.locations" style="margin-right: 5px; width: 20px;" class=""><i class="fo-{{key}} resistance-icon" title="physical"></i></label>
-                                <input type="text" class="flex3" name="data.resistance.{{key}}.locations" value="{{res.locations}}" placeholder="Body Locations">
+                                <label for="system.resistance.{{key}}.locations" style="margin-right: 5px; width: 20px;" class=""><i class="fo-{{key}} resistance-icon" title="physical"></i></label>
+                                <input type="text" class="flex3" name="system.resistance.{{key}}.locations" value="{{res.locations}}" placeholder="Body Locations">
                             </span>
                         </div>
                         {{/each}}
                     </div>
                     <div class="box no-padding bgEven">
                         <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.LOCATIONS_INJURIES"}}</h4>
-                        <textarea class="color-prim" name="data.injuries" rows="8" style="resize: none;" placeholder="You can use this to write locations, their values or critical inuries suffered.(ex. Wing | 2-4 | Injuries: 3 Opened, 2 Treated)">{{data.injuries}}</textarea>
+                        <textarea class="color-prim" name="system.injuries" rows="8" style="resize: none;" placeholder="You can use this to write locations, their values or critical inuries suffered.(ex. Wing | 2-4 | Injuries: 3 Opened, 2 Treated)">{{actor.system.injuries}}</textarea>
                     </div>
                 </div>
                 {{!-- RIGHT COLUMN __________________________________________________ --}}
@@ -97,13 +97,13 @@
                         <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.ATTACKS"}}</h4>
                         <div>
                             {{!-- Owned Weapons Tab --}}
-                            {{> "systems/fallout/templates/actor/parts/actor-weapons.html"}}
+                            {{> "systems/fallout-dusty/templates/actor/parts/actor-weapons.html"}}
                         </div>
                     </div>
 
                     <div class="resource-row">
                         {{!-- Owned Abilities Tab --}}
-                        {{> "systems/fallout/templates/actor/parts/actor-special_abilities.html"}}
+                        {{> "systems/fallout-dusty/templates/actor/parts/actor-special_abilities.html"}}
                     </div>
 
                     <div class="resource-row">
@@ -116,7 +116,7 @@
                                 </div>
                             </li>
                             {{#each inventory as |item id|}}
-                            {{> "systems/fallout/templates/actor/parts/simple-expandable-item.html" item=item}}
+                            {{> "systems/fallout-dusty/templates/actor/parts/simple-expandable-item.html" item=item}}
                             {{/each}}
                         </ol>
                     </div>
@@ -124,17 +124,17 @@
             </section>
         </div>
 
-        {{!-- Biography Tab --}}
-        <div class="tab biography" data-group="primary" data-tab="data">
-            {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll
-            data to the rollData property. --}}
-            {{editor content=data.biography target="data.biography" rollData=rollData button=true owner=owner
-            editable=editable}}
-        </div>
+		{{!-- Biography Tab --}}
+		<div class="tab data" data-group="primary" data-tab="data">
+			<div class="description-field resource-row">
+			  {{editor actor.system.biography target="system.biography" rollData=rollData button=true editable=editable
+								 engine="prosemirror" collaborate=false}}
+			</div>
+		</div>
 
         {{!-- Active Effects Tab --}}
         <!-- <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-            {{> "systems/fallout/templates/actor/parts/actor-effects.html"}}
+            {{> "systems/fallout-dusty/templates/actor/parts/actor-effects.html"}}
         </div> -->
 
     </section>
