--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} {{actor.type}} flexcol theme-wrapper" autocomplete="off">
 
   {{!-- Sheet Header --}}
-  {{> "systems/fallout/templates/actor/parts/actor-header.html"}}
+  {{> "systems/fallout-dusty/templates/actor/parts/actor-header.html"}}
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
@@ -21,11 +21,11 @@
         <div class="left-column">
           {{!-- SPECIAL --}}
           <div class="flexrow resource-row">
-            {{#each data.attributes as |ability key| }}
+            {{#each actor.system.attributes as |ability key| }}
             <div class="box">
               <div class="box-header text-center upperC resource-label">{{subString key 0 1}}</div>
               <div class="flex-center">
-                <input class="text-center" type="number" name="data.attributes.{{key}}.value" value="{{ability.value}}">
+                <input class="text-center" type="number" name="system.attributes.{{key}}.value" value="{{ability.value}}">
               </div>
             </div>
             {{/each}}
@@ -39,13 +39,13 @@
                   {{#each skills as |item id|}}
                   <li class="item skill flexrow" data-item-id="{{item._id}}">
                     <div class="item-name">
-                      <h4><a class="color-secondary"><span class="resource-label upperC">{{item.name}}</span> [{{toUpperCase item.data.defaultAttribute}}]</a></h4>
+                      <h4><a class="color-secondary"><span class="resource-label upperC">{{item.name}}</span> [{{toUpperCase item.system.defaultAttribute}}]</a></h4>
                     </div>
                     <div class="item-skill-tag">
-                      <input type="checkbox" name="tag" {{#ifCond item.data.tag '==' true}}checked{{/ifCond}}>
+                      <input type="checkbox" name="tag" {{#ifCond item.system.tag '==' true}}checked{{/ifCond}}>
                     </div>
                     <div class="item-skill-value">
-                      <input type="number" class="num-short-2" name="value" value="{{item.data.value}}">
+                      <input type="number" class="num-short-2" name="value" value="{{item.system.value}}">
                     </div>
                   </li>
                   {{/each}}
@@ -59,21 +59,21 @@
             <div class="box no-padding bgEven">
               <h4 class="box-header text-center">HP</h4>
               <div class="flexrow">
-                <input class="num-short-3" type="number" name="data.health.value" value="{{data.health.value}}">
+                <input class="num-short-3" type="number" name="system.health.value" value="{{actor.system.health.value}}">
                 <label class="text-center"> / </label>
-                <input class="num-short-3" type="number" name="data.health.max" value="{{data.health.max}}">
+                <input class="num-short-3" type="number" name="system.health.max" value="{{actor.system.health.max}}">
               </div>
             </div>
             <div class="box no-padding bgOdd">
               <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.INITIATIVE"}}</h4>
               <div class="text-center">
-                <input class="num-short-2" type="number" name="data.initiative.value" value="{{data.initiative.value}}">
+                <input class="num-short-2" type="number" name="system.initiative.value" value="{{actor.system.initiative.value}}">
               </div>
             </div>
             <div class="box no-padding bgEven">
               <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.DEFENSE"}}</h4>
               <div class="text-center">
-                <input class="num-short-2" type="number" name="data.defense.value" value="{{data.defense.value}}">
+                <input class="num-short-2" type="number" name="system.defense.value" value="{{actor.system.defense.value}}">
               </div>
             </div>
           </div>
@@ -83,14 +83,14 @@
             <div class="box no-padding bgOdd">
               <h4 class="box-header text-center">{{localize "FALLOUT.UI.CarryWeight"}}</h4>
               <div class="text-center">
-                <label><input class="num-short-3" type="number" name="data.carryWeight.base" value="{{data.carryWeight.base}}"> {{localize "FALLOUT.TEMPLATES.lbs"}}</label>
+                <label><input class="num-short-3" type="number" name="system.carryWeight.base" value="{{actor.system.carryWeight.base}}"> {{localize "FALLOUT.TEMPLATES.lbs"}}</label>
 
               </div>
             </div>
             <div class="box no-padding bgEven">
               <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.MELEE_BONUS"}}</h4>
               <div class="text-center">
-                <input class="num-short-2" type="number" name="data.meleeDamage.base" value="{{data.meleeDamage.base}}">
+                <input class="num-short-2" type="number" name="system.meleeDamage.base" value="{{actor.system.meleeDamage.base}}">
               </div>
             </div>
           </div>
@@ -98,11 +98,11 @@
           {{!-- RESISTANCES --}}
           <div class="box no-padding bgOdd">
             <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.RESISTANCES"}}</h4>
-            {{#each data.resistance as |res key|}}
+            {{#each actor.system.resistance as |res key|}}
             <div class="flexrow resource-row">
               <span class="align-mid" style="display: flex;">
-                <label for="data.resistance.{{key}}.locations" style="margin-right: 5px; width: 20px;" class=""><i class="fo-{{key}} resistance-icon" title="physical"></i></label>
-                <input type="text" class="flex3" name="data.resistance.{{key}}.locations" value="{{res.locations}}" placeholder="Body Locations">
+                <label for="system.resistance.{{key}}.locations" style="margin-right: 5px; width: 20px;" class=""><i class="fo-{{key}} resistance-icon" title="physical"></i></label>
+                <input type="text" class="flex3" name="system.resistance.{{key}}.locations" value="{{res.locations}}" placeholder="Body Locations">
               </span>
             </div>
             {{/each}}
@@ -110,7 +110,7 @@
           {{!-- INJURIES --}}
           <div class="box no-padding bgEven">
             <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.LOCATIONS_INJURIES"}}</h4>
-            <textarea class="color-prim" name="data.injuries" rows="8" style="resize: none;" placeholder="You can use this to write locations, their values or critical inuries suffered.(ex. Wing | 2-4 | Injuries: 3 Opened, 2 Treated)">{{data.injuries}}</textarea>
+            <textarea class="color-prim" name="system.injuries" rows="8" style="resize: none;" placeholder="You can use this to write locations, their values or critical inuries suffered.(ex. Wing | 2-4 | Injuries: 3 Opened, 2 Treated)">{{actor.system.injuries}}</textarea>
           </div>
         </div>
         {{!-- RIGHT COLUMN __________________________________________________ --}}
@@ -119,12 +119,12 @@
             <h4 class="box-header text-center">{{localize "FALLOUT.TEMPLATES.ATTACKS"}}</h4>
             <div>
               {{!-- Owned Weapons Tab --}}
-              {{> "systems/fallout/templates/actor/parts/actor-weapons.html"}}
+              {{> "systems/fallout-dusty/templates/actor/parts/actor-weapons.html"}}
             </div>
           </div>
           <div class="resource-row">
             {{!-- Owned Abilities Tab --}}
-            {{> "systems/fallout/templates/actor/parts/actor-special_abilities.html"}}
+            {{> "systems/fallout-dusty/templates/actor/parts/actor-special_abilities.html"}}
           </div>
           <div class="resource-row">
             <ol class="items-list">
@@ -138,11 +138,11 @@
               <li>
                 <span class="flex align-mid" style="flex-basis: 200px; margin-bottom: 5px;">
                   <label style="color:white" class="upperC"><strong>{{localize 'FALLOUT.UI.CAPS'}}:</strong></label>
-                  <input type="text" class="underline" name="data.currency.caps" value="{{data.currency.caps}}">
+                  <input type="text" class="underline" name="system.currency.caps" value="{{actor.system.currency.caps}}">
 				        </span>
               </li>
               {{#each inventory as |item id|}}
-              {{> "systems/fallout/templates/actor/parts/simple-expandable-item.html" item=item}}
+              {{> "systems/fallout-dusty/templates/actor/parts/simple-expandable-item.html" item=item}}
               {{/each}}
             </ol>
           </div>
@@ -150,15 +150,17 @@
       </section>
     </div>
 
-    {{!-- Data Tab --}}
+    {{!-- Biography Tab --}}
     <div class="tab data" data-group="primary" data-tab="data">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
-      {{editor content=data.biography target="data.biography" rollData=rollData button=true owner=owner editable=editable}}
+		<div class="description-field resource-row">
+		  {{editor actor.system.biography target="system.biography" rollData=rollData button=true editable=editable
+							 engine="prosemirror" collaborate=false}}
+		</div>
     </div>
 
     {{!-- Active Effects Tab --}}
     <!-- <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-      {{> "systems/fallout/templates/actor/parts/actor-effects.html"}}
+      {{> "systems/fallout-dusty/templates/actor/parts/actor-effects.html"}}
     </div> -->
 
   </section>
