--- a/templates/actor/parts/actor-inventory.html
+++ b/templates/actor/parts/actor-inventory.html
@@ -1,11 +1,13 @@
+{{> "systems/fallout-dusty/templates/actor/parts/actor-encumbrance.html"}}
+
 <div class="flex" style="margin: 5px 0 10px 0; padding: 10px; background-color: black;">
     <span class="flex align-mid" style="flex-basis: 200px; margin-right: 20px;">
         <label style="color:white" class="upperC"><strong>{{localize 'FALLOUT.UI.CAPS'}}:</strong></label>
-        <input type="text" class="underline" name="data.currency.caps" value="{{data.currency.caps}}">
+        <input type="text" class="underline" name="system.currency.caps" value="{{actor.system.currency.caps}}">
     </span>
     <span class="flex align-mid" style="flex-basis: 100%;">
         <label style="color:white" class="upperC"><strong>{{localize 'FALLOUT.UI.OTHER'}}:</strong></label>
-        <input type="text" class="underline" name="data.currency.other" value="{{data.currency.other}}" style="width: 100%;" placeholder="Pre War Money, Gold, New Money, etc.">
+        <input type="text" class="underline" name="system.currency.other" value="{{actor.system.currency.other}}" style="width: 100%;" placeholder="Pre War Money, Gold, New Money, etc.">
     </span>
 </div>
 
@@ -24,7 +26,7 @@
                     </div>
                 </li>
                 {{#each robot_mods as |item id|}}
-                {{> "systems/fallout/templates/actor/parts/simple-expandable-item.html" item=item }}
+                {{> "systems/fallout-dusty/templates/actor/parts/simple-expandable-item.html" item=item }}
                 {{/each}}
             </ol>
         </div>
@@ -41,7 +43,7 @@
                     </div>
                 </li>
                 {{#each weapon_mods as |item id|}}
-                {{> "systems/fallout/templates/actor/parts/simple-expandable-item.html" item=item }}
+                {{> "systems/fallout-dusty/templates/actor/parts/simple-expandable-item.html" item=item }}
                 {{/each}}
             </ol>
         </div>
@@ -57,7 +59,7 @@
                     </div>
                 </li>
                 {{#each apparel_mods as |item id|}}
-                {{> "systems/fallout/templates/actor/parts/simple-expandable-item.html" item=item }}
+                {{> "systems/fallout-dusty/templates/actor/parts/simple-expandable-item.html" item=item }}
                 {{/each}}
             </ol>
         </div>
@@ -76,7 +78,7 @@
                     </div>
                 </li>
                 {{#each consumables as |item id|}}
-                {{> "systems/fallout/templates/actor/parts/simple-expandable-item.html" item=item}}
+                {{> "systems/fallout-dusty/templates/actor/parts/simple-expandable-item.html" item=item}}
                 {{/each}}
             </ol>
         </div>
@@ -91,7 +93,7 @@
                     </div>
                 </li>
                 {{#each books_and_magz as |item id|}}
-                {{> "systems/fallout/templates/actor/parts/simple-expandable-item.html" item=item}}
+                {{> "systems/fallout-dusty/templates/actor/parts/simple-expandable-item.html" item=item}}
                 {{/each}}
             </ol>
         </div>
@@ -106,7 +108,7 @@
                     </div>
                 </li>
                 {{#each miscellany as |item id|}}
-                {{> "systems/fallout/templates/actor/parts/simple-expandable-item.html" item=item}}
+                {{> "systems/fallout-dusty/templates/actor/parts/simple-expandable-item.html" item=item}}
                 {{/each}}
             </ol>
         </div>
@@ -117,7 +119,7 @@
                     <div class="flexrow flexlarge item-name upperC">{{localize 'FALLOUT.UI.UNSORTED'}}</div>
                 </li>
                 {{#each inventory as |item id|}}
-                {{> "systems/fallout/templates/actor/parts/simple-expandable-item.html" item=item}}
+                {{> "systems/fallout-dusty/templates/actor/parts/simple-expandable-item.html" item=item}}
                 {{/each}}
             </ol>
         </div>
