--- a/templates/actor/parts/actor-skills.html
+++ b/templates/actor/parts/actor-skills.html
@@ -8,13 +8,13 @@
   <li class="item skill flexrow" data-item-id="{{item._id}}">
     <div class="item-name">
       <h4><a class="color-secondary"><span class="resource-label upperC">{{item.name}}</span> [{{localize (concat
-          'FALLOUT.AbilityAbbr.' item.data.defaultAttribute)}}]</a></h4>
+          'FALLOUT.AbilityAbbr.' item.system.defaultAttribute)}}]</a></h4>
     </div>
     <div class="item-skill-tag">
-      <input type="checkbox" name="tag" {{#ifCond item.data.tag '==' true}}checked{{/ifCond}}>
+      <input type="checkbox" name="tag" {{#ifCond item.system.tag '==' true}}checked{{/ifCond}}>
     </div>
     <div class="item-skill-value">
-      <input type="number" class="num-short-2" name="value" value="{{item.data.value}}" min="0">
+      <input type="number" class="num-short-2" name="value" value="{{item.system.value}}" min="0">
     </div>
   </li>
   {{/each}}
