--- a/templates/actor/parts/actor-status.html
+++ b/templates/actor/parts/actor-status.html
@@ -7,15 +7,15 @@
             </div>
             <div class="flexrow resource-row align-mid">
                 <label class="resource-label">{{localize "FALLOUT.TEMPLATES.MELEE_DAMAGE"}}</label>
-                <input class="num-short-2" type="number" name="data.meleeDamage.base" value="{{data.meleeDamage.base}}">
+                <input class="num-short-2" type="number" name="system.meleeDamage.base" value="{{actor.system.meleeDamage.base}}">
             </div>
             <div class="flexrow resource-row align-mid">
                 <label class="resource-label">{{localize "FALLOUT.TEMPLATES.DEFENSE"}}</label>
-                <input class="num-short-2" type="number" name="data.defense.base" value="{{data.defense.base}}">
+                <input class="num-short-2" type="number" name="system.defense.base" value="{{actor.system.defense.base}}">
             </div>
             <div class="flexrow resource-row align-mid">
                 <label class="resource-label">{{localize "FALLOUT.TEMPLATES.INITIATIVE"}}</label>
-                <input class="num-short-2" type="number" name="data.initiative.value" value="{{data.initiative.value}}">
+                <input class="num-short-2" type="number" name="system.initiative.value" value="{{actor.system.initiative.value}}">
             </div>
         </div>
 
@@ -27,32 +27,32 @@
                 <div class="flexrow resource-row">
                     <span>
                         <i class="fo-physical"></i>
-                        <label for="data.resistance.physical">{{localize "FALLOUT.TEMPLATES.PHYS"}}</label>
+                        <label for="system.resistance.physical">{{localize "FALLOUT.TEMPLATES.PHYS"}}</label>
                     </span>
-                    <input type="number" name="data.resistance.physical" class="num-short-2"
-                        value="{{data.resistance.physical}}">
+                    <input type="number" name="system.resistance.physical" class="num-short-2"
+                        value="{{actor.system.resistance.physical}}">
                 </div>
                 <div class="flexrow resource-row">
-                    <span><i class="fo-energy"></i><label for="data.resistance.energy">{{localize
+                    <span><i class="fo-energy"></i><label for="system.resistance.energy">{{localize
                             "FALLOUT.TEMPLATES.ENG"}}</label></span>
-                    <input type="number" name="data.resistance.energy" class="num-short-2"
-                        value="{{data.resistance.energy}}">
+                    <input type="number" name="system.resistance.energy" class="num-short-2"
+                        value="{{actor.system.resistance.energy}}">
                 </div>
                 <div class="flexrow resource-row">
                     <span>
                         <i class="fo-radiation"></i>
-                        <label for="data.resistance.radiation">{{localize "FALLOUT.TEMPLATES.RAD"}}</label>
+                        <label for="system.resistance.radiation">{{localize "FALLOUT.TEMPLATES.RAD"}}</label>
                     </span>
-                    <input type="number" name="data.resistance.radiation" class="num-short-2"
-                        value="{{data.resistance.radiation}}">
+                    <input type="number" name="system.resistance.radiation" class="num-short-2"
+                        value="{{actor.system.resistance.radiation}}">
                 </div>
                 <div class="flexrow resource-row">
                     <span>
                         <i class="fo-poison"></i>
-                        <label for="data.resistance.poison">{{localize "FALLOUT.TEMPLATES.POISON"}}</label>
+                        <label for="system.resistance.poison">{{localize "FALLOUT.TEMPLATES.POISON"}}</label>
                     </span>
-                    <input type="number" name="data.resistance.poison" class="num-short-2"
-                        value="{{data.resistance.poison}}">
+                    <input type="number" name="system.resistance.poison" class="num-short-2"
+                        value="{{actor.system.resistance.poison}}">
                 </div>
             </div>
         </div>
@@ -77,23 +77,23 @@
         </div>
         {{!-- PIP BOY --}}
         <div class="pipboy-status-screen {{actor.type}}">
-            <div class="body-part head {{data.body_parts.head.status}}"></div>
-            <div class="body-part torso {{data.body_parts.torso.status}}"></div>
-            <div class="body-part armL {{data.body_parts.armL.status}}"></div>
-            <div class="body-part armR {{data.body_parts.armR.status}}"></div>
-            <div class="body-part legL {{data.body_parts.legL.status}}"></div>
-            <div class="body-part legR {{data.body_parts.legR.status}}"></div>
-            {{> "systems/fallout/templates/actor/parts/body-status-plaque.html" bodypart=data.body_parts.head
+            <div class="body-part head {{actor.system.body_parts.head.status}}"></div>
+            <div class="body-part torso {{actor.system.body_parts.torso.status}}"></div>
+            <div class="body-part armL {{actor.system.body_parts.armL.status}}"></div>
+            <div class="body-part armR {{actor.system.body_parts.armR.status}}"></div>
+            <div class="body-part legL {{actor.system.body_parts.legL.status}}"></div>
+            <div class="body-part legR {{actor.system.body_parts.legR.status}}"></div>
+            {{> "systems/fallout-dusty/templates/actor/parts/body-status-plaque.html" bodypart=actor.system.body_parts.head
             keypart="head"}}
-            {{> "systems/fallout/templates/actor/parts/body-status-plaque.html" bodypart=data.body_parts.torso
+            {{> "systems/fallout-dusty/templates/actor/parts/body-status-plaque.html" bodypart=actor.system.body_parts.torso
             keypart="torso"}}
-            {{> "systems/fallout/templates/actor/parts/body-status-plaque.html" bodypart=data.body_parts.armL
+            {{> "systems/fallout-dusty/templates/actor/parts/body-status-plaque.html" bodypart=actor.system.body_parts.armL
             keypart="armL"}}
-            {{> "systems/fallout/templates/actor/parts/body-status-plaque.html" bodypart=data.body_parts.armR
+            {{> "systems/fallout-dusty/templates/actor/parts/body-status-plaque.html" bodypart=actor.system.body_parts.armR
             keypart="armR"}}
-            {{> "systems/fallout/templates/actor/parts/body-status-plaque.html" bodypart=data.body_parts.legL
+            {{> "systems/fallout-dusty/templates/actor/parts/body-status-plaque.html" bodypart=actor.system.body_parts.legL
             keypart="legL"}}
-            {{> "systems/fallout/templates/actor/parts/body-status-plaque.html" bodypart=data.body_parts.legR
+            {{> "systems/fallout-dusty/templates/actor/parts/body-status-plaque.html" bodypart=actor.system.body_parts.legR
             keypart="legR"}}
         </div>
 
@@ -107,10 +107,10 @@
             </div>
             <div class="flexrow align-mid">
                 <input class="num-short-3" style="font-size:18px; background-color: beige; color: black;" type="number"
-                    name="data.health.value" value="{{data.health.value}}" min="0">
+                    name="system.health.value" value="{{actor.system.health.value}}" min="0">
                 <span class="text-center">/</span>
                 <input class="num-short-3" style="font-size:18px; background-color: beige; color: black;" type="number"
-                    name="data.health.max" value="{{data.health.max}}" min="0">
+                    name="system.health.max" value="{{actor.system.health.max}}" min="0">
             </div>
         </div>
 
@@ -128,7 +128,7 @@
                 <i class="fo-radiation" style="margin-right: 3px;"></i>
                 <h4 style="margin:0 5px 0 0"><strong>{{localize "FALLOUT.TEMPLATES.RADIATION"}}</strong>
                 </h4><input class="num-short-2" style="font-size:12px; background-color: beige; color: black;"
-                    type="number" name="data.radiation" value="{{data.radiation}}" min="0">
+                    type="number" name="system.radiation" value="{{actor.system.radiation}}" min="0">
             </div>
         </div>
         {{/ifCond}}
@@ -141,46 +141,46 @@
             <div class="power-armor-status">
                 <div class="body-part"
                     style="position: absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;">
-                    <label>{{data.outfitedLocations.head.data.health.max}}</label>
+                    <label>{{actor.system.outfitedLocations.head.system.health.max}}</label>
                     <input class="num-short-2 power-armor-monitor-helath-value" type="number"
-                        value="{{data.outfitedLocations.head.data.health.value}}" data-body-location="head"
-                        data-item-id="{{data.outfitedLocations.head._id}}" min="0">
+                        value="{{actor.system.outfitedLocations.head.system.health.value}}" data-body-location="head"
+                        data-item-id="{{actor.system.outfitedLocations.head._id}}" min="0">
                 </div>
 
                 <div class="body-part"
                     style="position: absolute;margin-left: auto;margin-right: auto;left: 0;right: 0;top:60px;">
-                    <label>{{data.outfitedLocations.torso.data.health.max}}</label>
+                    <label>{{actor.system.outfitedLocations.torso.system.health.max}}</label>
                     <input class="num-short-2 power-armor-monitor-helath-value" type="number"
-                        value="{{data.outfitedLocations.torso.data.health.value}}" data-body-location="torso"
-                        data-item-id="{{data.outfitedLocations.torso._id}}" min="0">
+                        value="{{actor.system.outfitedLocations.torso.system.health.value}}" data-body-location="torso"
+                        data-item-id="{{actor.system.outfitedLocations.torso._id}}" min="0">
                 </div>
 
                 <div class=" body-part" style="position: absolute;left: 0;top:50px;">
-                    <label>{{data.outfitedLocations.armL.data.health.max}}</label>
+                    <label>{{actor.system.outfitedLocations.armL.system.health.max}}</label>
                     <input class="num-short-2 power-armor-monitor-helath-value" type="number"
-                        value="{{data.outfitedLocations.armL.data.health.value}}" data-body-location="armL"
-                        data-item-id="{{data.outfitedLocations.armL._id}}" min="0">
+                        value="{{actor.system.outfitedLocations.armL.system.health.value}}" data-body-location="armL"
+                        data-item-id="{{actor.system.outfitedLocations.armL._id}}" min="0">
                 </div>
 
                 <div class=" body-part" style="position: absolute; right: 0; top:50px;">
-                    <label>{{data.outfitedLocations.armR.data.health.max}}</label>
+                    <label>{{actor.system.outfitedLocations.armR.system.health.max}}</label>
                     <input class="num-short-2 power-armor-monitor-helath-value" type="number"
-                        value="{{data.outfitedLocations.armR.data.health.value}}" data-body-location="armR"
-                        data-item-id="{{data.outfitedLocations.armR._id}}" min="0">
+                        value="{{actor.system.outfitedLocations.armR.system.health.value}}" data-body-location="armR"
+                        data-item-id="{{actor.system.outfitedLocations.armR._id}}" min="0">
                 </div>
 
                 <div class=" body-part" style="position: absolute;left: 15px; top:120px;">
-                    <label>{{data.outfitedLocations.legL.data.health.max}}</label>
+                    <label>{{actor.system.outfitedLocations.legL.system.health.max}}</label>
                     <input class="num-short-2 power-armor-monitor-helath-value" type="number"
-                        value="{{data.outfitedLocations.legL.data.health.value}}" data-body-location="legL"
-                        data-item-id="{{data.outfitedLocations.legL._id}}" min="0">
+                        value="{{actor.system.outfitedLocations.legL.system.health.value}}" data-body-location="legL"
+                        data-item-id="{{actor.system.outfitedLocations.legL._id}}" min="0">
                 </div>
 
                 <div class=" body-part" style="position: absolute; right: 15px; top:120px;">
-                    <label>{{data.outfitedLocations.legR.data.health.max}}</label>
+                    <label>{{actor.system.outfitedLocations.legR.system.health.max}}</label>
                     <input class="num-short-2 power-armor-monitor-helath-value" type="number"
-                        value="{{data.outfitedLocations.legR.data.health.value}}" data-body-location="legR"
-                        data-item-id="{{data.outfitedLocations.legR._id}}" min="0">
+                        value="{{actor.system.outfitedLocations.legR.system.health.value}}" data-body-location="legR"
+                        data-item-id="{{actor.system.outfitedLocations.legR._id}}" min="0">
                 </div>
             </div>
         </div>
@@ -193,10 +193,10 @@
             </div>
             <div>
                 <ol class="items-list">
-                    {{#each data.equippedRobotMods as |item key|}}
+                    {{#each actor.system.equippedRobotMods as |item key|}}
                     <li class="item">
                         <h4 style="margin: 0; padding: 2px; background-color: #00000040;">{{item.name}}</h4>
-                        <span class="font-size-11">{{{item.data.data.effect}}}</span>
+                        <span class="font-size-11">{{{item.system.effect}}}</span>
                     </li>
                     {{/each}}
                 </ol>
@@ -207,34 +207,17 @@
     </div>
 </div>
 
-{{!-- ENCUMBRANCE --}}
-<div class="box no-padding" style="margin-top: 5px; margin-bottom: 0px;">
-    <div class="flexrow align-mid">
-        <div class="flex-center">
-            <label for="">{{data.carryWeight.base}} .{{localize "FALLOUT.TEMPLATES.lbs"}} + </label>
-            <input type="number" name="data.carryWeight.mod" class="num-short-2" value="{{data.carryWeight.mod}}">
-            <label for=""> = {{localize "FALLOUT.TEMPLATES.MAX"}}: {{data.carryWeight.value}} .{{localize
-                "FALLOUT.TEMPLATES.lbs"}}</label>
-        </div>
-        <div class="text-center">
-            <label>{{localize "FALLOUT.TEMPLATES.Encumbrance_Level"}}: {{data.encumbranceLevel}}</label>
-        </div>
-        <div style="text-align: right;">
-            <label>{{localize "FALLOUT.TEMPLATES.Total"}}: {{data.totalWeight}} / {{data.carryWeight.value}} .{{localize
-                "FALLOUT.TEMPLATES.lbs"}}</label>
-        </div>
-    </div>
-</div>
+{{> "systems/fallout-dusty/templates/actor/parts/actor-encumbrance.html"}}
 
 {{!-- FAVOURITE ROW // EQUIPPED --}}
 <div class="status footer grid grid-5col">
     <div class="grid-span-2">
-        {{> "systems/fallout/templates/actor/parts/actor-favorite_weapons.html"}}
+        {{> "systems/fallout-dusty/templates/actor/parts/actor-favorite_weapons.html"}}
     </div>
     <div class="grid-span-2">
-        {{> "systems/fallout/templates/actor/parts/actor-equipped_apparel.html"}}
+        {{> "systems/fallout-dusty/templates/actor/parts/actor-equipped_apparel.html"}}
     </div>
     <div>
-        {{> "systems/fallout/templates/actor/parts/actor-conditions.html"}}
+        {{> "systems/fallout-dusty/templates/actor/parts/actor-conditions.html"}}
     </div>
 </div>
