--- a/templates/item/item-books_and_magz-sheet.html
+++ b/templates/item/item-books_and_magz-sheet.html
@@ -1,5 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
-    {{> "systems/fallout/templates/item/parts/item-header.html"}}
+    {{> "systems/fallout-dusty/templates/item/parts/item-header.html"}}
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
@@ -11,22 +11,24 @@
         {{!-- Attributes Tab --}}
         <div class="tab attributes" data-group="primary" data-tab="attributes">
             <div class="flexrow resource-row">
-                <label for="data.issue" class="resource-label">{{localize "FALLOUT.TEMPLATES.Issue"}}</label>
-                <input type="text" name="data.issue" value="{{data.issue}}">
+                <label for="system.issue" class="resource-label">{{localize "FALLOUT.TEMPLATES.Issue"}}</label>
+                <input type="text" name="system.issue" value="{{item.system.issue}}">
             </div>
             <div class="flexrow align-left resource-row">
-                <label for="data.learned" class="resource-label">{{localize "FALLOUT.TEMPLATES.Learned"}}</label>
-                <input type="checkbox" name="data.learned" {{#ifCond data.learned '==' true}}checked{{/ifCond}}>
+                <label for="system.learned" class="resource-label">{{localize "FALLOUT.TEMPLATES.Learned"}}</label>
+                <input type="checkbox" name="system.learned" {{#ifCond item.system.learned '==' true}}checked{{/ifCond}}>
             </div>
 
             <h3 class="resource-label">{{localize "FALLOUT.TEMPLATES.Effect"}}</h3>
-            <div class="description-field">
-                {{editor content=data.effect target="data.effect" button=true owner=owner editable=editable}}
-            </div>
+				<div class="description-field resource-row">
+					{{editor item.system.effect target="system.effect" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
+				</div>
         </div>
         {{!-- Description Tab --}}
         <div class="tab description" data-group="primary" data-tab="description">
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+			<div class="description-field resource-row">
+				{{editor item.system.description target="system.description" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
+			</div>
         </div>
     </section>
 </form>
