--- a/templates/item/item-consumable-sheet.html
+++ b/templates/item/item-consumable-sheet.html
@@ -1,5 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
-    {{> "systems/fallout/templates/item/parts/item-header.html"}}
+    {{> "systems/fallout-dusty/templates/item/parts/item-header.html"}}
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
@@ -11,9 +11,9 @@
         {{!-- Attributes Tab --}}
         <div class="tab attributes" data-group="primary" data-tab="attributes">
             <div class="flexrow resource-row">
-                <label for="data.consumableType" class="resource-label">{{localize "FALLOUT.TEMPLATES.Consumable_Type"}}</label>
-                {{#select data.consumableType}}
-                <select name="data.consumableType">
+                <label for="system.consumableType" class="resource-label">{{localize "FALLOUT.TEMPLATES.Consumable_Type"}}</label>
+                {{#select item.system.consumableType}}
+                <select name="system.consumableType">
                     {{#each FALLOUT.consumableTypes as |type key|}}
                     <option value="{{key}}">{{localize type}}</option>
                     {{/each}}
@@ -21,49 +21,51 @@
                 {{/select}}
             </div>
             {{!-- FOOD --}}
-            {{#ifCond data.consumableType '==' 'food' }}
+            {{#ifCond item.system.consumableType '==' 'food' }}
             <div class="flexrow resource-row">
-                <label for="data.hp" class="resource-label">{{localize "FALLOUT.TEMPLATES.HP_Healed"}}</label>
-                <input type="number" name="data.hp" value="{{data.hp}}">
+                <label for="system.hp" class="resource-label">{{localize "FALLOUT.TEMPLATES.HP_Healed"}}</label>
+                <input type="number" name="system.hp" value="{{item.system.hp}}">
             </div>
             <div class="flexrow resource-row">
-                <label for="data.irradiated" class="resource-label">{{localize "FALLOUT.TEMPLATES.Irradiated"}}</label>
-                <input type="checkbox" name="data.irradiated" {{#ifCond data.irradiated '==' true}}checked{{/ifCond}}>
-            </div>
-            {{/ifCond}}
-            {{#ifCond data.consumableType '==' 'beverage' }}
-            <div class="flexrow resource-row">
-                <label for="data.hp" class="resource-label">{{localize "FALLOUT.TEMPLATES.HP_Healed"}}</label>
-                <input type="number" name="data.hp" value="{{data.hp}}">
-            </div>
-            <div class="flexrow resource-row">
-                <label for="data.irradiated" class="resource-label">{{localize "FALLOUT.TEMPLATES.Irradiated"}}</label>
-                <input type="checkbox" name="data.irradiated" {{#ifCond data.irradiated '==' true}}checked{{/ifCond}}>
-            </div>
-            <div class="flexrow resource-row">
-                <label for="data.alcoholic" class="resource-label">{{localize "FALLOUT.TEMPLATES.Alcoholic"}}</label>
-                <input type="checkbox" name="data.alcoholic" {{#ifCond data.alcoholic '==' true}}checked{{/ifCond}}>
+                <label for="system.irradiated" class="resource-label">{{localize "FALLOUT.TEMPLATES.Irradiated"}}</label>
+                <input type="checkbox" name="system.irradiated" {{#ifCond item.system.irradiated '==' true}}checked{{/ifCond}}>
             </div>
             {{/ifCond}}
-            {{#ifCond data.consumableType '==' 'chem' }}
+            {{#ifCond item.system.consumableType '==' 'beverage' }}
             <div class="flexrow resource-row">
-                <label for="data.duration" class="resource-label">{{localize "FALLOUT.TEMPLATES.Duration"}}</label>
-                <input type="text" name="data.duration" value="{{data.duration}}">
+                <label for="system.hp" class="resource-label">{{localize "FALLOUT.TEMPLATES.HP_Healed"}}</label>
+                <input type="number" name="system.hp" value="{{item.system.hp}}">
             </div>
             <div class="flexrow resource-row">
-                <label for="data.addictive" class="resource-label">{{localize "FALLOUT.TEMPLATES.Addictive"}}</label>
-                <input type="text" name="data.addictive" value="{{data.addictive}}">
+                <label for="system.irradiated" class="resource-label">{{localize "FALLOUT.TEMPLATES.Irradiated"}}</label>
+                <input type="checkbox" name="system.irradiated" {{#ifCond item.system.irradiated '==' true}}checked{{/ifCond}}>
+            </div>
+            <div class="flexrow resource-row">
+                <label for="system.alcoholic" class="resource-label">{{localize "FALLOUT.TEMPLATES.Alcoholic"}}</label>
+                <input type="checkbox" name="system.alcoholic" {{#ifCond item.system.alcoholic '==' true}}checked{{/ifCond}}>
+            </div>
+            {{/ifCond}}
+            {{#ifCond item.system.consumableType '==' 'chem' }}
+            <div class="flexrow resource-row">
+                <label for="system.duration" class="resource-label">{{localize "FALLOUT.TEMPLATES.Duration"}}</label>
+                <input type="text" name="system.duration" value="{{item.system.duration}}">
+            </div>
+            <div class="flexrow resource-row">
+                <label for="system.addictive" class="resource-label">{{localize "FALLOUT.TEMPLATES.Addictive"}}</label>
+                <input type="text" name="system.addictive" value="{{item.system.addictive}}">
             </div>
             {{/ifCond}}
             <h3 class="resource-label">{{localize "FALLOUT.TEMPLATES.Effect"}}</h3>
             <div class="description-field">
-                {{editor content=data.effect target="data.effect" button=true owner=owner editable=editable}}
+                {{editor item.system.effect target="system.effect" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
             </div>
         </div>
 
         {{!-- Description Tab --}}
         <div class="tab description" data-group="primary" data-tab="description">
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+            <div class="description-field">
+				{{editor item.system.description target="system.description" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
+			</div>
         </div>
     </section>
 </form>
