--- a/templates/item/item-item-sheet.html
+++ b/templates/item/item-item-sheet.html
@@ -1,5 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
-  {{> "systems/fallout/templates/item/parts/item-header.html"}}
+  {{> "systems/fallout-dusty/templates/item/parts/item-header.html"}}
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
@@ -13,7 +13,9 @@
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
-      {{editor content=data.description target="data.description" rollData=rollData button=true owner=owner editable=editable}}
+		<div class="description-field">
+			{{editor item.system.description target="system.description" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
+		</div>
     </div>
 
     {{!-- Attributes Tab --}}
@@ -21,7 +23,7 @@
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
         <label class="resource-label">{{localize "FALLOUT.TEMPLATES.Roll_Formula"}}</label>
-        <input type="text" name="data.formula" value="{{data.formula}}" data-dtype="String" />
+        <input type="text" name="system.formula" value="{{item.system.formula}}" data-dtype="String" />
       </div>
     </div>
   </section>
