--- a/templates/item/item-miscellany-sheet.html
+++ b/templates/item/item-miscellany-sheet.html
@@ -1,5 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
-    {{> "systems/fallout/templates/item/parts/item-header.html"}}
+    {{> "systems/fallout-dusty/templates/item/parts/item-header.html"}}
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
@@ -12,13 +12,15 @@
         <div class="tab attributes" data-group="primary" data-tab="attributes">
             <h3 class="resource-label">{{localize "FALLOUT.TEMPLATES.Effect"}}</h3>
             <div class="description-field">
-                {{editor content=data.effect target="data.effect" button=true owner=owner editable=editable}}
+                {{editor item.system.effect target="system.effect" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
             </div>
         </div>
 
         {{!-- Description Tab --}}
         <div class="tab description" data-group="primary" data-tab="description">
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+            <div class="description-field">
+				{{editor item.system.description target="system.description" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
+			</div>
         </div>
     </section>
 </form>
