--- a/templates/item/item-perk-sheet.html
+++ b/templates/item/item-perk-sheet.html
@@ -1,6 +1,6 @@
 <form class="{{cssClass}}" autocomplete="off">
 
-  {{> "systems/fallout/templates/item/parts/item-header.html"}}
+  {{> "systems/fallout-dusty/templates/item/parts/item-header.html"}}
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
@@ -12,7 +12,7 @@
 
     {{!-- Active Effects Tab --}}
     <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-      {{> "systems/fallout/templates/item/parts/item-effects.html"}}
+      {{> "systems/fallout-dusty/templates/item/parts/item-effects.html"}}
     </div>
 
     {{!-- Attributes Tab --}}
@@ -21,22 +21,22 @@
         <label class="resource-label">{{localize "FALLOUT.TEMPLATES.Ranks_current_maximum"}}</label>
         <span class="flexrow align-mid">
           <!-- <label class="text-center">current:</label> -->
-          <input class="text-center num-short-3" type="number" name="data.rank.value" value="{{data.rank.value}}">
+          <input class="text-center num-short-3" type="number" name="system.rank.value" value="{{item.system.rank.value}}">
           <label class="text-center">/</label>
           <!-- <label class="text-center">max:</label> -->
-          <input class="text-center num-short-3" type="number" name="data.rank.max" value="{{data.rank.max}}">
+          <input class="text-center num-short-3" type="number" name="system.rank.max" value="{{item.system.rank.max}}">
         </span>
       </div>
       <div class="flexrow resource-row align-mid">
         <label class="resource-label">{{localize "FALLOUT.TEMPLATES.Requirements"}}</label>
-        <input type="text" name="data.requirements" value="{{data.requirements}}">
+        <input type="text" name="system.requirements" value="{{item.system.requirements}}">
       </div>
       <div class="resource-row resource-label align-mid">
         <label>{{localize "FALLOUT.TEMPLATES.Description"}}</label>
       </div>
-      <div class="description-field">
-        {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
-      </div>
+        <div class="description-field">
+			{{editor item.system.description target="system.description" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
+		</div>
     </div>
   </section>
 
