--- a/templates/item/item-special_ability-sheet.html
+++ b/templates/item/item-special_ability-sheet.html
@@ -1,6 +1,6 @@
 <form class="{{cssClass}}" autocomplete="off">
 
-    {{> "systems/fallout/templates/item/parts/item-header.html"}}
+    {{> "systems/fallout-dusty/templates/item/parts/item-header.html"}}
   
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
@@ -11,7 +11,7 @@
     <section class="sheet-body">
       {{!-- Active Effects Tab --}}
       <!-- <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-        {{> "systems/fallout/templates/item/parts/item-effects.html"}}
+        {{> "systems/fallout-dusty/templates/item/parts/item-effects.html"}}
       </div> -->
   
       {{!-- Attributes Tab --}}
@@ -20,7 +20,7 @@
           <label>{{localize "FALLOUT.TEMPLATES.Description"}}</label>
         </div>
         <div class="description-field">
-          {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+          {{editor item.system.description target="system.description" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
         </div>
       </div>
     </section>
