--- a/templates/item/item-weapon-sheet.html
+++ b/templates/item/item-weapon-sheet.html
@@ -1,5 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
-  {{> "systems/fallout/templates/item/parts/item-header.html"}}
+  {{> "systems/fallout-dusty/templates/item/parts/item-header.html"}}
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
@@ -13,7 +13,9 @@
 
     {{!-- Description Tab --}}
     <div class="tab description" data-group="primary" data-tab="description">
-      {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+		<div class="description-field resource-row">
+			{{editor item.system.description target="system.description" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
+		</div>
     </div>
 
     {{!-- Mods Tab --}}
@@ -22,18 +24,18 @@
         <label class="resource-label">{{localize "FALLOUT.MODS.mods"}}</label>
         <div class="flexrow align-mid">
           <span>
-            <label for="data.mods.current">{{localize "FALLOUT.TEMPLATES.current"}}</label>
-            <input type="number" name="data.mods.current" class="num-short-2" value="{{data.mods.current}}">
+            <label for="system.mods.current">{{localize "FALLOUT.TEMPLATES.current"}}</label>
+            <input type="number" name="system.mods.current" class="num-short-2" value="{{item.system.mods.current}}">
           </span>
           <span class="text-center">/</span>
           <span>
-            <label for="data.mods.max">{{localize "FALLOUT.TEMPLATES.max"}}</label>
-            <input type="number" name="data.mods.max" class="num-short-2" value="{{data.mods.max}}">
+            <label for="system.mods.max">{{localize "FALLOUT.TEMPLATES.max"}}</label>
+            <input type="number" name="system.mods.max" class="num-short-2" value="{{item.system.mods.max}}">
           </span>
         </div>
       </div>
       <div class="description-field resource-row">
-        {{editor content=data.mods.list target="data.mods.list" button=true owner=owner editable=editable}}
+		{{editor item.system.mods.list target="system.mods.list" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
       </div>
     </div>
 
@@ -41,8 +43,8 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       <div class="flexrow resource-row bgOdd">
         <label class="resource-label">{{localize "FALLOUT.TEMPLATES.Weapon_Type"}}</label>
-        <select name="data.weaponType">
-          {{#select data.weaponType}}
+        <select name="system.weaponType">
+          {{#select item.system.weaponType}}
           {{#each FALLOUT.WEAPONS.weaponType as |wType key|}}
           <option value="{{key}}">{{localize wType}}</option>
           {{/each}}
@@ -53,9 +55,9 @@
       {{#if (isCreaturesWeapon item)}}
       <div class="resource-row grid bgOdd">
         <div class="flexrow align-mid">
-          <label class="resource-label" for="data.attribute">{{localize "FALLOUT.TEMPLATES.Creature_Attribute"}}</label>
-          <select name="data.attribute">
-            {{#select data.attribute}}
+          <label class="resource-label" for="system.attribute">{{localize "FALLOUT.TEMPLATES.Creature_Attribute"}}</label>
+          <select name="system.attribute">
+            {{#select item.system.attribute}}
             {{#each FALLOUT.CREATURE.attributes as |attr key|}}
             <option value="{{key}}">{{localize attr}}</option>
             {{/each}}
@@ -63,9 +65,9 @@
           </select>
         </div>
         <div class="flexrow align-mid">
-          <label class="resource-label" for="data.skill">{{localize "FALLOUT.TEMPLATES.Creature_Skill"}}</label>
-          <select name="data.skill">
-            {{#select data.skill}}
+          <label class="resource-label" for="system.skill">{{localize "FALLOUT.TEMPLATES.Creature_Skill"}}</label>
+          <select name="system.skill">
+            {{#select item.system.skill}}
             {{#each FALLOUT.CREATURE.skills as |skill key|}}
             <option value="{{key}}">{{localize skill}}</option>
             {{/each}}
@@ -76,17 +78,17 @@
       {{/if}}
 
       <div class="resource-row flexrow bgEven">
-        <label class="resource-label" for="data.damage.rating">{{localize "FALLOUT.TEMPLATES.DAMAGE"}}</label>
-        <input type="number" name="data.damage.rating" value="{{data.damage.rating}}">
+        <label class="resource-label" for="system.damage.rating">{{localize "FALLOUT.TEMPLATES.DAMAGE"}}</label>
+        <input type="number" name="system.damage.rating" value="{{item.system.damage.rating}}">
       </div>
 
       <div class="flexrow resource-row bgOdd">
-        <label class="resource-label" for="data.damage.damageType">{{localize "FALLOUT.TEMPLATES.DAMAGE_TYPE"}}</label>
+        <label class="resource-label" for="system.damage.damageType">{{localize "FALLOUT.TEMPLATES.DAMAGE_TYPE"}}</label>
         <div class="grid">
-          {{#each data.damage.damageType as |dmgType key|}}
+          {{#each item.system.damage.damageType as |dmgType key|}}
           <div class="flexrow toggle-label {{#ifCond dmgType '==' true}}active{{/ifCond}}">
             <label class="font-size-13">
-              <input class="" type="checkbox" name="data.damage.damageType.{{key}}" {{#ifCond dmgType '=='
+              <input class="" type="checkbox" name="system.damage.damageType.{{key}}" {{#ifCond dmgType '=='
                 true}}checked{{/ifCond}}>
               {{localize (concat 'FALLOUT.WEAPONS.damageType.' key)}} <i class="fo-{{key}}"></i>
             </label>
@@ -96,9 +98,9 @@
       </div>
 
       <div class="resource-row flexrow bgEven">
-        <label class="resource-label" for="data.range">{{localize "FALLOUT.TEMPLATES.RANGE"}}</label>
-        <select name="data.range">
-          {{#select data.range}}
+        <label class="resource-label" for="system.range">{{localize "FALLOUT.TEMPLATES.RANGE"}}</label>
+        <select name="system.range">
+          {{#select item.system.range}}
           {{#each FALLOUT.WEAPONS.range as |range key|}}
           <option value="{{key}}">{{localize range}}</option>
           {{/each}}
@@ -107,29 +109,29 @@
       </div>
 
       <div class="flexrow resource-row bgOdd">
-        <label class="resource-label" for="data.fireRate">{{localize "FALLOUT.TEMPLATES.FIRE_RATE"}}</label>
-        <input type="number" name="data.fireRate" value="{{data.fireRate}}">
+        <label class="resource-label" for="system.fireRate">{{localize "FALLOUT.TEMPLATES.FIRE_RATE"}}</label>
+        <input type="number" name="system.fireRate" value="{{item.system.fireRate}}">
       </div>
 
       <div class="flexrow resource-row bgEven">
-        <label class="resource-label" for="data.ammo">{{localize "ITEM.TypeAmmo"}}</label>
-        <input type="text" name="data.ammo" value="{{data.ammo}}">
+        <label class="resource-label" for="system.ammo">{{localize "ITEM.TypeAmmo"}}</label>
+        <input type="text" name="system.ammo" value="{{item.system.ammo}}">
       </div>
 
       <div class="flexrow resource-row bgOdd">
-        <label class="resource-label" for="data.tear">{{localize "FALLOUT.TEMPLATES.Tear"}}</label>
-        <input type="text" name="data.tear" value="{{data.tear}}">
+        <label class="resource-label" for="system.tear">{{localize "FALLOUT.TEMPLATES.Tear"}}</label>
+        <input type="text" name="system.tear" value="{{item.system.tear}}">
       </div>
 
       <div class="grid">
         <div class="resource-row">
-          <label class="resource-label" for=" data.damage.rating">{{localize
+          <label class="resource-label" for=" system.damage.rating">{{localize
             "FALLOUT.TEMPLATES.WEAPON_QUALITIES"}}</label>
           <div class="grid item-list">
-            {{#each data.damage.weaponQuality as |item key|}}
+            {{#each item.system.damage.weaponQuality as |item key|}}
             <div class="flexrow toggle-label {{#ifCond item.value '==' true}}active{{/ifCond}} hover" data-key="{{key}}">
               <label>
-                <input type="checkbox" name="data.damage.weaponQuality.{{key}}.value" {{#ifCond item.value '=='
+                <input type="checkbox" name="system.damage.weaponQuality.{{key}}.value" {{#ifCond item.value '=='
                   true}}checked{{/ifCond}}>{{localize (concat 'FALLOUT.WEAPONS.weaponQuality.' key)}}
               </label>
             </div>
@@ -137,29 +139,21 @@
           </div>
         </div>
         <div class="resource-row">
-          <label class="resource-label" for=" data.damage.rating">{{localize
+          <label class="resource-label" for=" system.damage.rating">{{localize
             "FALLOUT.TEMPLATES.DAMAGE_EFFECTS"}}</label>
           <div class="grid item-list">
-            {{#each data.damage.damageEffect as |item key|}}
+            {{#each item.system.damage.damageEffect as |item key|}}
             <div class="flexrow toggle-label {{#ifCond item.value '==' true}}active{{/ifCond}} hover" data-key="{{key}}">
               <label>
-                <input type="checkbox" name="data.damage.damageEffect.{{key}}.value" {{#ifCond item.value '=='
+                <input type="checkbox" name="system.damage.damageEffect.{{key}}.value" {{#ifCond item.value '=='
                   true}}checked{{/ifCond}}>{{localize (concat 'FALLOUT.WEAPONS.damageEffect.' key)}}
               </label>
               {{#ifCond key '==' 'piercing'}}
-              <input type="number" name="data.damage.damageEffect.{{key}}.rank" class="num-short-2"
+              <input type="number" name="system.damage.damageEffect.{{key}}.rank" class="num-short-2"
                 value="{{item.rank}}">
               {{/ifCond}}
             </div>
             {{/each}}
-            <!-- {{#each data.damage.damageEffect as |item key|}}
-            <div class="wpn-tag damage-effect-tag toggle-label flex align-mid {{#ifCond item.value '==' true}}active{{/ifCond}}" data-tag-key="{{key}}" data-tag-value="{{item.value}}" data-index="{{@index}}" data-tag-type='damageEffect'>
-              <label class="wpn-tag-toggler">{{item.label}}</label>
-              {{#ifCond key '==' 'piercing'}}
-              <input type="number" class="num-short-2 wpn-tag-rank" value="{{item.rank}}">
-              {{/ifCond}}
-            </div>
-            {{/each}} -->
           </div>
         </div>
       </div>
