--- a/templates/item/item-weapon_mod-sheet.html
+++ b/templates/item/item-weapon_mod-sheet.html
@@ -1,5 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
-  {{> "systems/fallout/templates/item/parts/item-header.html"}}
+  {{> "systems/fallout-dusty/templates/item/parts/item-header.html"}}
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
@@ -14,8 +14,8 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       <div class="flexrow resource-row">
         <label class="resource-label">{{localize "FALLOUT.TEMPLATES.Weapon_Type"}}</label>
-        {{#select data.weaponType}}
-        <select name="data.weaponType" id="">
+        {{#select item.system.weaponType}}
+        <select name="system.weaponType" id="">
           {{#each FALLOUT.WEAPONS.weaponType as |item key|}}
           <option value="{{key}}">{{localize item}}</option>
           {{/each}}
@@ -25,32 +25,33 @@
 
       <div class="flexrow resource-row">
         <label class="resource-label">{{localize "FALLOUT.TEMPLATES.Mod_Type"}}</label>
-        <input type="text" name="data.modType" placeholder="Receiver Mod, Grip Mod, .etc" value="{{data.modType}}">
+        <input type="text" name="system.modType" placeholder="Receiver Mod, Grip Mod, .etc" value="{{item.system.modType}}">
       </div>
 
       <div class="flexrow resource-row">
         <label class="resource-label">{{localize "FALLOUT.TEMPLATES.Name_Prefix"}}</label>
-        <input type="text" name="data.namePrefix" value="{{data.namePrefix}}">
+        <input type="text" name="system.namePrefix" value="{{item.system.namePrefix}}">
       </div>
 
       <div class="flexrow resource-row">
         <label class="resource-label">{{localize "FALLOUT.UI.Perks"}}</label>
-        <input type="text" name="data.perks" value="{{data.perks}}">
+        <input type="text" name="system.perks" value="{{item.system.perks}}">
       </div>
 
       <div class="resource-row">
         <h3 class="resource-label">{{localize "FALLOUT.TEMPLATES.Effect"}}</h3>
-        <div class="description-field">
-          {{editor content=data.effect target="data.effect" button=true owner=owner editable=editable}}
-        </div>
+            <div class="description-field">
+				{{editor item.system.effect target="system.effect" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
+			</div>
       </div>
 
     </div>
 
     {{!-- Description Tab --}}
     <div class="tab description" data-group="primary" data-tab="description">
-      {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
-      {{editor content=data.description target="data.description" rollData=rollData button=true owner=owner editable=editable}}
+            <div class="description-field">
+				{{editor item.system.description target="system.description" rollData=rollData button=true editable=editable engine="prosemirror" collaborate=false}}
+			</div>
     </div>
 
 
